# sursface

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: flake-ci.yaml
examples/: Cargo.toml
examples/src/cube_and_inputs/: cube.rs  main.rs
examples/src/cube_and_inputs/assets/: shader.wgsl
examples/src/cube_camera/: main.rs
examples/src/cube_camera/assets/: shader.wgsl
examples/src/hello_triangle/: main.rs
examples/src/hello_triangle/assets/: shader.wgsl
examples/src/hello_window/: lib.rs  main.rs
examples/src/mandelbrot/: main.rs  viewport.rs
examples/src/mandelbrot/assets/: shader.wgsl
examples/src/spinning_cube/: cube.rs  main.rs
sursface/: Cargo.toml
sursface/src/: app.rs  lib.rs  start.rs  time.rs
sursface/src/display/: LICENSE  mod.rs
sursface/src/std/: mod.rs  models.rs
