[package]
name = "sursface_examples"
version = "0.1.0"
edition = "2021"
description = "Common example code"

[[bin]]
name = "hello_window"
path = "src/hello_window/main.rs"

[[bin]]
name = "hello_triangle"
path = "src/hello_triangle/main.rs"

[[bin]]
name = "cube_and_inputs"
path = "src/cube_and_inputs/main.rs"


[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.3"
log = "0.4.21"
sursface = { path = "../sursface" }
wasm-bindgen = "0.2.92"
