[package]
name = "sursface_examples"
version = "0.1.0"
edition = "2021"
description = "Sursface example projects"

[[bin]]
name = "hello_window"
path = "src/hello_window/main.rs"

[[bin]]
name = "hello_triangle"
path = "src/hello_triangle/main.rs"

[[bin]]
name = "cube_camera"
path = "src/cube_camera/main.rs"

[[bin]]
name = "mandelbrot"
path = "src/mandelbrot/main.rs"


[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
wasm-bindgen = "0.2.92"
sursface = { path = "../sursface" }