[package]
name = "sursface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
name = "sursface"
path = "src/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
pollster = "0.3.0"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Window", "Performance"] }
getrandom = { version = "0.2.15", features = ["js"] }
wgpu = { version = "0.20.0", features = ["webgl"] }
winit = "0.30.0"
fern = "0.6.2"
wasm-bindgen-futures = "0.4.42"
web-time = "1.1.0"
console_log = "1.0.0"
log = "0.4.21"
cgmath = "0.18.0"
image = "0.25.1"